# CADET-RDM

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AUTHORS.md  CITATION.bib  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: CI.yml  publish_to_pypi.yml  release.yml  ruff.yml
cadetrdm/: __init__.py  batch_runner.py  cli_integration.py  conda_env_utils.py  configuration_options.py  environment.py  initialize_repo.py  io_utils.py  jupyter_functionality.py  logging.py  options.py  remote_integration.py  repositories.py  utils.py  web_utils.py  wrapper.py
cadetrdm/batch_running/: case.py  study.py
cadetrdm/container/: ApptainerAdapter.py  __init__.py  containerAdapter.py  dockerAdapter.py  podmanAdapter.py
cadetrdm/docker/: __init__.py  dockerAdapter.py
cadetrdm/tools/: process_example.py
docs/: Makefile  README.md
docs/source/: bibliography.md  conf.py  index.md
docs/source/user_guide/: CLI-interface.md  command-line-interface.md  getting-started.md  installation.md  (+3 more)
examples/: Apptainer.def  Dockerfile  demonstration.py  environment.yml  example_for_runner.py  runner_repo_cli.py  runner_repo_main.py
git_lfs_utils/: __init__.py  conda_env_utils.py  utils.py
modsimdata/: __init__.py  utils.py
tests/: case.yml  print_random_number.py  test_batch_runner.py  test_cli.py  test_configuration_options.py  test_container_docker.py  test_container_podman.py  test_docker.py  test_git_adapter.py  test_gitlab_api.py  test_jupyter.ipynb  test_logging.py  test_options.py  test_parallel_push.py
