[metadata]
name = modsimdata
version = 0.1.0
author = Ronald Jäpel
author_email = r.jaepel@fz-juelich.de
description = A solution for research data management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://jugit.fz-juelich.de/IBG-1/ModSim/cadet/ModsimDataTool
project_urls =
    Bug Tracker = https://jugit.fz-juelich.de/IBG-1/ModSim/cadet/ModsimDataTool/Issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gitpython

[options.extras_require]
testing =
    setuptools
    certifi     # tries to prevent certificate problems on windows
    pre-commit  # system tests run pre-commit
    flake8      # system tests run flake8
    matplotlib
    numpy


[flake8]
max_line_length = 88
exclude =
    build
    dist
    .eggs
    docs/conf.py
